idf_component_register(SRCS "src/DabbleESP32.cpp"
                            #"src/CameraModule.cpp"
                            #"src/ColorDetectorModule.cpp"
                            "src/DabbleInputs.cpp"
                            "src/DabblePrint.cpp"
                            "src/DabblePrintln.cpp"
                            #"src/DataLoggerModule.cpp"
                            "src/esp32BLEUtilities.cpp"
                            "src/GamePadModule.cpp"
                            #"src/InternetModule.cpp"
                            "src/LedControlModule.cpp"
                            "src/ModuleParent.cpp"
                            #"src/motorControls.cpp"
                            #"src/MusicModule.cpp"
                            "src/NotifyAndSMSModule.cpp"
                            #"src/PinMonitorModule.cpp"
                            "src/SensorModule.cpp"
                            "src/TerminalModule.cpp"  
                    INCLUDE_DIRS "src"
                    REQUIRES arduino)
